--- a/User Mangement/register.html
+++ b/User Mangement/register.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register - Online Healthcare System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="card p-4" style="max-width: 500px;">
+            <h3 class="text-center">Register</h3>
+            <form id="registerForm" onsubmit="return validateRegister()">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                    <div id="usernameError" class="text-danger" style="display:none;">Username is required.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter email">
+                    <div id="emailError" class="text-danger" style="display:none;">Please enter a valid email.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password">
+                    <div id="passwordError" class="text-danger" style="display:none;">Password must be at least 6 characters long.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="confirmPassword" class="form-label">Confirm Password</label>
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password">
+                    <div id="confirmPasswordError" class="text-danger" style="display:none;">Passwords must match.</div>
+                </div>
+                <button type="submit" class="btn btn-success w-100">Register</button>
+            </form>
+            <p class="mt-3 text-center">Already have an account? <a href="index.html">Login here</a></p>
+        </div>
+    </div>
+
+    <script src="js/validation.js"></script>
+</body>
+</html>
 
